traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt:Int=0
  while positionTest()==false {
    parcours()
    cpt+=1
    ecritMessage(msc:cpt)    
    positionTest()
    
  }
  
}


def positionTest():Boolean={
  if(getMondeHauteur()==getY() && getMondeLargeur()==getX()){
    return true
  }else {
    return false
  }
  
}

def parcours(){
  var x:Int=0
  var y:Int=0

  x=getX()
  y=getY()
    
  if (estFaceMur==false){
    setPos(x,y+1)
    
  }else{
    setPos(x+1,0)
  }
  
}